# depth_clustering

./: .gitignore  .qglviewer.xml
doc/: .qglviewer.xml
examples/ros_nodes/: CMakeLists.txt  show_objects_node.cpp
src/: CMakeLists.txt
src/clusterers/: ground_clusterer.h  image_based_clusterer.h
src/ground_retrieval/: CMakeLists.txt  depth_ground_retriever.cpp  depth_ground_retriever.h
src/projections/: cloud_projection.cpp  cloud_projection.h  projection_params.cpp  projection_params.h  ring_projection.h
src/ros_bridge/: CMakeLists.txt  cloud_clusters_publisher.cpp  cloud_clusters_publisher.h  cloud_odom_ros_subscriber.cpp  cloud_odom_ros_subscriber.h  cloud_ros_publisher.cpp  cloud_ros_publisher.h  ground_publisher.cpp  ground_publisher.h
src/utils/: cloud.cpp  cloud.h
